iowow (1.3.6) UNRELEASED; urgency=medium

  * BUG: Memory leak in `iwkv_cursor_open` on error (#21)
  * BUG: `iwxstr_new2()` with zero size argument causes illegal memory write (#20)
  * Added `iwkv_cursor_seth()` record update handle supported by `iwkv_cursor_set`

 -- Anton Adamansky <adamansky@gmail.com>  Thu, 21 Mar 2019 09:40:38 +0700

iowow (1.3.5) testing; urgency=medium

  * BUG: Data from deleted database can interfere with newly created db (#19)

 -- Anton Adamansky <adamansky@gmail.com>  Wed, 20 Mar 2019 20:26:22 +0700

iowow (1.3.4) testing; urgency=medium

  * Code documentation improvements

 -- Anton Adamansky <adamansky@gmail.com>  Mon, 11 Mar 2019 22:42:51 +0700

iowow (1.3.3) testing; urgency=medium

  * BUG: `iwkv_puth` called with incorrect previous value (iwkv.h)
  * _kvblk_getvalue renamed to _kvblk_value_get (iwkv.c)
  * _kvblk_peek_val renamed to _kvblk_value_peek (iwkv.c)
  * _kvblk_getkey renamed to _kvblk_key_get (iwkv.c)
  * _kvblk_getkv renamed to _kvblk_kv_get (iwkv.c)

 -- Anton Adamansky <adamansky@gmail.com>  Fri, 08 Mar 2019 17:02:46 +0700

iowow (1.3.2) testing; urgency=medium

  * Added `iwkv_cursor_is_matched_key` (iwkv.h)
  * `iwkv_cursor_copy_key` now aware of `IWDB_COMPOUND_KEYS` mode (iwkv.h)
  * `iwkv_cursor_copy_key` can accept zero kbuf,kbufsz only compound part will returned in this case (iwkv.h)

 -- Anton Adamansky <adamansky@gmail.com>  Mon, 04 Mar 2019 20:50:03 +0700

iowow (1.3.1) testing; urgency=medium

  * Eliminate adaptive `IWDB_VNUM64_KEYS` key sizing in `_unpack_effective_key` for the sake of API simplicity (iwkv.c)
  * BUG: incorrect key handling in `iwkv_del` - key was not unpacked before. (iwkv.h)

 -- Anton Adamansky <adamansky@gmail.com>  Thu, 28 Feb 2019 10:40:11 +0700

iowow (1.3.0) testing; urgency=medium

  * `IWKV_PUT_HANDLER` called for insert operations (not only for updates)
  * Added `IWFS_OUNLINK` flag. Unlink(delete) file on close (iwfile.h)